--- a/src/components/RiskNotify/RiskNotify.scss
+++ b/src/components/RiskNotify/RiskNotify.scss
@@ -3,10 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  // position: absolute;
   width: 17rem;
   height: 8rem;
-  position: absolute;
+  // position: absolute;
   top: 507px;
   right: 806px;
   cursor: pointer;
